Ensure compatibility with Java 8 runtime